--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(300deg, deepskyblue, darkviolet);
+  background: linear-gradient(400deg, deepskyblue, var(--purple));
   background-size: 120% 120%;
   background-repeat: no-repeat;
   object-fit: cover;
